--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "lint": "eslint .",
     "fix": "eslint --fix .",
     "format": "prettier --write .",
-    "typecheck": "tsc",
+    "typecheck": "tsc --noEmit",
+    "test:unit": "vitest src",
+    "test:e2e": "playwright test",
+    "test:ui": "playwright test --ui",
+    "test": "bun test:unit && bun test:e2e",
     "check": "bun format && bun lint && bun typecheck",
     "clean": "rm -rf ./node_modules ./dist",
     "visualize": "vite-bundle-visualizer",
@@ -43,6 +47,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
+    "@playwright/test": "^1.52.0",
     "@types/node": "^22.15.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
