--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
     "preview": "vite preview",
     "serve": "vite preview --host",
     "lint": "eslint .",
-    "fix": "eslint --fix .",
+    "lint:fix": "eslint --fix .",
     "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "typecheck": "tsc --noEmit",
     "test:unit": "vitest src",
     "test:e2e": "playwright test",
     "test:ui": "playwright test --ui",
     "test": "bun test:unit && bun test:e2e",
-    "check": "bun format && bun lint && bun typecheck",
+    "check": "bun format:check && bun lint:fix && bun typecheck",
     "clean": "rm -rf ./node_modules ./dist",
     "visualize": "vite-bundle-visualizer",
     "git:add": "bun check && git add -p",
     "prepare": "husky"
   },
   "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": "bun eslint --fix",
-    "**/*.{js,jsx,ts,tsx,css,scss,md}": "bun prettier --write"
+    "**/*.{js,jsx,ts,tsx}": "bun lint:fix",
+    "**/*.{js,jsx,ts,tsx,css,scss,md}": "bun format:check"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.4",
