Update README and package.json

--- a/package.json
+++ b/package.json
@@ -8,20 +8,20 @@
     "build": "tsc -b && vite build",
     "preview": "vite preview",
     "serve": "vite preview --host",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix .",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "typecheck": "tsc --noEmit",
+    "tsc": "tsc --noEmit",
+    "format": "bunx prettier . --write",
+    "format:check": "bunx prettier . --check",
+    "lint": "bunx eslint .",
+    "lint:fix": "bunx eslint . --fix",
     "test:unit": "vitest src",
     "test:e2e": "playwright test",
     "test:ui": "playwright test --ui",
     "test": "bun test:unit && bun test:e2e",
-    "check": "bun format:check && bun lint:fix && bun typecheck",
+    "check": "bun format:check && bun lint && bun tsc",
     "clean": "rm -rf ./node_modules ./dist",
     "visualize": "vite-bundle-visualizer",
     "git:add": "bun check && git add -p",
-    "prepare": "husky"
+    "prepare": "husky install"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": "bun lint:fix",
