--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "**/*.{js,jsx,ts,tsx,css,scss,md}": "bun format:check"
   },
   "dependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
